<resources>
    <string name="app_name">DataFit</string>
    <string name="e_mail">Seu e-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Sua senha</string>
    <string name="logo">LOGO</string>
    <string name="entrar">Entrar</string>
    <string name="login_com_o_google">Login com o Google</string>
    <string name="quero_me_cadastrar">Quero me cadastrar</string>
    <string name="ja_tenho_cadastro">JA TENHO CADASTRO</string>
    <string name="ja_tem_conta">Já tem uma conta?</string>
    <string name="faca_login"><u>Faça login</u></string>
    <string name="seu_peso">Peso (Kg)</string>
    <string name="sua_altura">Altura (cm)</string>
    <string name="sua_idade">Idade</string>
    <string name="seu_sexo">Sexo</string>
    <string name="qual_o_seu_objetivo">Qual é o seu objetivo</string>
    <string name="whats_your_level">Você já fez exercícios físicos?</string>
    <string name="avancar">Avançar</string>
    <string name="esqueci_minha_senha"><u>Esqueceu a senha?</u></string>
    <string name="homeLabel">Home</string>
    <string name="advanced">Avançado</string>
    <string name="intermediate">Intermediário</string>
    <string name="beginner">Iniciante</string>
    <string name="frequency_title">20 minutos por dia</string>
    <string name="frequency_description">Para criar hábito, vamos focar em treinos com 20-45 minutos em média, mas precisamos que você descanse no máximo por 2 dias por semana. Vamos?</string>
    <string name="frequency_rest">Escolha até 2 dias para descanso:</string>
    <string name="monday">S</string>
    <string name="tuesday">T</string>
    <string name="wednesday">Q</string>
    <string name="thursday">Q</string>
    <string name="friday">S</string>
    <string name="saturday">S</string>
    <string name="sunday">D</string>
    <string name="ainda_n_o_tem_conta_cadastre_se">Ainda não tem conta?</string>
    <string name="cadastrar_com_google">Cadastrar com Google</string>
    <string name="welcome_text_1">Já tenho uma conta? Faça login</string>
    <string name="diamant_new_victory">NOVA CONQUISTA</string>
    <string name="diamant_earned_title">+2 diamantes</string>
    <string name="diamant_earned_description">Você ganhou 2 diamantes por completar seu primeiro acesso da DataFit. Complete treinos para ganhar mais e usar na nossa lojinha.</string>
    <string name="level_achieved_title">Nível 1</string>
    <string name="level_achieved_description">Você atingiu o nível 1. Complete as missões e mantenha a consistência para passar de níveis.</string>
    <string name="timeLeft">00:00:%1$d</string>
    <string name="timeLeftWithZero">00:00:0%1$d</string>
    <string name="restTime">%1$d</string>
    <string name="restTime1">00:%1$d</string>
    <string name="respire_e_descanse">Respire e descanse</string>
    <string name="missao_1">Missão 1</string>
    <string name="esse_treino_trabalha_abdome">Esse treino trabalha abdome</string>
    <string name="duration_22_min">22 min</string>
    <string name="nome_do_exercicio">Nome do exercício</string>
    <string name="numero_de_repeticoes">Número de repetições</string>
    <string name="congratulations">Congratulations</string>
    <string name="finalizei">Finalizei</string>
    <string name="abdominal_supra">Abdominal supra</string>
    <string name="repetitions">3x de 30 repetições</string>
    <string name="comecar_agora">Começar agora</string>
    <string name="comecar_o_treino">Começar o treino</string>
    <string name="nova_conquista">NOVA CONQUISTA</string>
    <string name="missao_finalizada">Missão finalizada</string>
    <string name="cadastre_se_login"><u>Cadastre-se.</u></string>
    <string name="missao_finalizada_descricao">Parabéns, você concluiu o treino de hoje!</string>
</resources>