<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WelcomeHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWelcome"
    tools:context=".activities.WelcomeActivity">

    <TextView
        android:id="@+id/btnLoginAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/faca_login"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/ja_tem_conta"
        android:textColor="#BDBFC2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        app:layout_constraintVertical_bias="1.0" />

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/btnLogin"
        android:layout_marginBottom="68dp"
        app:disableAutoPlayOnUserInteraction="true"
        app:fillColor="#FFFFFFFF"
        app:indicatorVisibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        
        app:pageColor="#00000000"
        app:radius="6dp"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_shape_yellow"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="@string/quero_me_cadastrar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>