<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2E34"
    tools:context=".activities.AboutYouActivity">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="Sobre você"
        android:textColor="#BDBFC2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="56dp"
        android:background="#303641"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_shape_yellow"
        android:fontFamily="@font/proxima_nova_bold"
        android:hint="@string/avancar"
        android:text="@string/avancar"
        android:textAllCaps="false"
        android:textColor="#2A2E34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGoal" />

    <EditText
        android:id="@+id/txtHeight"
        android:textCursorDrawable="@null"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:maxLength="3"
        android:autofillHints=""
        android:background="@drawable/button_shape"
        android:ems="10"
        android:gravity="bottom"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:paddingBottom="12dp"
        android:shadowColor="#303641"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAboutYou" />

    <EditText
        android:id="@+id/txtAge"
        android:textCursorDrawable="@null"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:maxLength="3"
        android:autofillHints=""
        android:background="@drawable/button_shape"
        android:ems="10"
        android:gravity="bottom"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:paddingBottom="12dp"
        android:shadowColor="#303641"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txtGender"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeight" />

    <Spinner
        android:id="@+id/txtGoal"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="7dp"
        android:paddingBottom="8dp"
        android:textSize="13sp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/proxima_nova_regular"
        android:backgroundTint="#303641"
        android:spinnerMode="dropdown"
        android:theme="@style/spinnerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge"  />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/proxima_nova_regular"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:text="@string/qual_o_seu_objetivo"
        android:textAllCaps="false"
        android:textColor="#80848B"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge" />

    <Spinner
        android:id="@+id/txtGender"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@drawable/button_shape"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="7dp"
        android:paddingBottom="8dp"
        android:textSize="13sp"
        android:spinnerMode="dropdown"
        android:theme="@style/spinnerTheme"
        android:fontFamily="@font/proxima_nova_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtAge"
        app:layout_constraintTop_toBottomOf="@+id/txtWeight" />

    <TextView
        android:id="@+id/textView163"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/seu_sexo"
        android:textAllCaps="false"
        android:textColor="#80848B"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtAge"
        app:layout_constraintTop_toBottomOf="@+id/txtWeight"   />

    <EditText
        android:id="@+id/txtWeight"
        android:textCursorDrawable="@null"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:maxLength="3"
        android:autofillHints=""
        android:background="@drawable/button_shape"
        android:ems="10"
        android:gravity="bottom"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:paddingBottom="12dp"
        android:shadowColor="#303641"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtHeight"
        app:layout_constraintTop_toTopOf="@+id/txtHeight" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/seu_peso"
        android:textAllCaps="false"
        android:textColor="#80848B"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/txtWeight"
        app:layout_constraintTop_toTopOf="@+id/txtWeight" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/sua_altura"
        android:textAllCaps="false"
        android:textColor="#80848B"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/txtHeight"
        app:layout_constraintTop_toTopOf="@+id/txtHeight" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/sua_idade"
        android:textAllCaps="false"
        android:textColor="#80848B"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/txtAge"
        app:layout_constraintTop_toTopOf="@+id/txtAge" />

    <TextView
        android:id="@+id/labelAboutYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="97dp"
        android:fontFamily="@font/proxima_nova_bold"
        android:text="Sobre você"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>